peopleOverview and mask to add person checked for layout bugs
git-svn-id: svn+ssh://evolvis.org/scmrepos/svn/veraweb/trunk@588 293e2372-0500-4244-b9aa-80dbbde7b6ea

--- a/veraweb-war/src/main/webapp/styles/style.css
+++ b/veraweb-war/src/main/webapp/styles/style.css
@@ -452,11 +452,11 @@ nav a, #nav a {
 	padding: 20px;
 }
 
-#actionPanel {
-	
-}
-
-.buttonPanel-top {
+.info {
+    background-color: #FFFFFF;
+    border: 2px solid #8B0F0F;
+    min-height: 100%;
+    padding: 10px;
 }
 
 #main_content {
